--- a/src/package.json
+++ b/src/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "express": "^4.16.3",
     "gulp": "^4.0.0",
+    "gulp-less": "^4.0.1",
     "socket.io": "^2.2.0"
   }
 }
