--- a/src/package.json
+++ b/src/package.json
@@ -17,8 +17,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
-    "gulp": "^4.0.0",
+    "gulp": "^3.9.1",
     "gulp-less": "^4.0.1",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
   }
 }
