--- a/src/package.json
+++ b/src/package.json
@@ -4,6 +4,7 @@
   "description": "Realtime comments for a 10-hour long youtube video",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,6 +20,6 @@
     "express": "^4.16.3",
     "gulp": "^3.9.1",
     "gulp-less": "^4.0.1",
-    "socket.io": "^2.2.0",
+    "socket.io": "^2.2.0"
   }
 }
